--- a/frontend/src/app/componentes/tela8/tela8.component.html
+++ b/frontend/src/app/componentes/tela8/tela8.component.html
@@ -18,9 +18,16 @@
               <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
           </div>
           <p id="aproAtiv">Presença</p>
+          <div id="calenPresenc">
+            <label id="data" for="date">Data da Presença: </label>
+            <input type="date" id="date">
+          </div>
           <div id="caixaAside">
+            <h1 id="nomeAside">Nome</h1>
+            <h1 id="matAside">Matricula</h1>
             <div  id="perAside" >
-                <input  type="text" name="" id="nomeComple" placeholder="Nome Completo:">
+                <input  type="text" name="" id="nomeComple" placeholder="nome">
+                <input  type="text" name="" id="matricula" placeholder="matricula">
             <div id="mudar">
               <button id="btnCheck"><img src="../../../assets/imagens/check.png" alt=""></button>
               <button id="btnClose"><img src="../../../assets/imagens/close.png" alt=""></button>
@@ -29,4 +36,3 @@
               </div>
     </aside>
   </main>
-  
