--- a/frontend/src/app/componentes/tela2/tela2.component.css
+++ b/frontend/src/app/componentes/tela2/tela2.component.css
@@ -15,11 +15,32 @@ main{
   background-color: #01526F;
 
 }
+#buttons{
+  margin-top: 20%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
 
 #divisor-line{
   width: 80%;
   border: 1.5px solid #fff;
 
+}
+#btnVolt{
+
+  align-items: center;
+    position: fixed;
+    left: 25%;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    color: #fff;
+    background-color: #44A685;
+    border-radius: 15px;
+    border-color: #ffffff;
+    bottom: 90%;
 }
 
 section{
@@ -222,6 +243,10 @@ aside{
 
   #buttonsAside{
     position: absolute;
+  }
+
+  #btnVolt{
+    display: none;
   }
 }
 
