--- a/frontend/src/app/componentes/tela2/tela2.component.html
+++ b/frontend/src/app/componentes/tela2/tela2.component.html
@@ -15,6 +15,11 @@
     </div>
   </section>
   <aside>
+
+    <div id="btnTela3">
+      <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
+  </div>
+  
     <img class="imgsPrinci" id="logo_pjb" src="../../../assets/imagens/logo_pjb.png" alt="logo_pjb">
     <img class="imgsPrinci" id="logoGestao" src="../../../assets/imagens/Gestão_PJB_Pag1.png" alt="Gestão">
         <div id="buttonsAside">
