--- a/frontend/src/app/componentes/tela5/tela5.component.html
+++ b/frontend/src/app/componentes/tela5/tela5.component.html
@@ -14,6 +14,9 @@
     </div>
   </section>
   <aside>
+    <div id="btnTela3">
+      <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
+  </div>
     <section class="container">
       <h1  id="title" class="tituloRegistro">Registrar-se</h1>
       <form id="formCadastro">
