--- a/frontend/src/app/componentes/tela3/tela3.component.html
+++ b/frontend/src/app/componentes/tela3/tela3.component.html
@@ -72,7 +72,7 @@
       </div>
       <div class="caderno">
           <textarea  id="textin" placeholder="Escreva aqui..."></textarea>
-          <button >Salvar</button>
+          <button id="btnSalv" >Salvar</button>
       </div>
 
   </aside>
