--- a/frontend/src/app/componentes/tela2/tela2.component.html
+++ b/frontend/src/app/componentes/tela2/tela2.component.html
@@ -2,8 +2,7 @@
 <main>
   <section>
     <div id="presentUser">
-        <h1>Bem-vindo,</h1>
-        <span id="nomeUser">leticia</span>
+        <h1>Bem-vindo</h1>
     </div>
     <hr id="divisor-line">
     <img  id="menuInic" src="../../../assets/imagens/menu.png" alt=""  >
@@ -19,7 +18,7 @@
     <div id="btnTela3">
       <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
   </div>
-  
+
     <img class="imgsPrinci" id="logo_pjb" src="../../../assets/imagens/logo_pjb.png" alt="logo_pjb">
     <img class="imgsPrinci" id="logoGestao" src="../../../assets/imagens/Gestão_PJB_Pag1.png" alt="Gestão">
         <div id="buttonsAside">
