--- a/frontend/src/app/componentes/tela8/tela8.component.html
+++ b/frontend/src/app/componentes/tela8/tela8.component.html
@@ -1,8 +1,8 @@
 <main>
   <section>
     <div id="presentUser">
-      <h1>Bem-vindo,</h1>
-      <span id="nomeUser">Leticia</span>
+      <h1>Bem-vindo</h1>
+
     </div>
     <hr id="divisor-line">
     <img id="menuInic" src="../../../assets/imagens/menu.png" alt="">
