--- a/frontend/src/app/componentes/tela6/tela6.component.css
+++ b/frontend/src/app/componentes/tela6/tela6.component.css
@@ -122,31 +122,33 @@ aside{
 #perAside{
   position: absolute;
   text-align: left;
+  flex-direction: column;
   padding: 20px;
   top: 5%;
   left:7%;
   padding-top: 20px;
   border-radius: 20px;
   background-color: #EFF5F4;
-  height: 250px;
+  height: 150px;
   width: 670px;
+  gap: 4px;
+}
+
+.atividade-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: #f9f9f9;
+
 }
 
 .perguntasAside{
-  background-color: #EFF5F4;
+
+  height: 90px;
+  width: 500px;
 }
 
-
-#mudar{
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 17%;
-  left: 83%;
-  flex-direction: column;
-  gap: 10px;
-
-}
 
 
 .header {
@@ -163,15 +165,6 @@ aside{
 
 }
 
-#anterior{
-  width: 40px;
-  height: 30px;
-}
-
-#sucessor{
-  width: 40px;
-  height: 30px;
-}
 
 .dias, .semanas {
     display: grid;
@@ -252,22 +245,36 @@ aside{
   top: 130px;
 }
 
+
+#mudar{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 7px;
+  left: 83%;
+  flex-direction: column;
+  gap: 10px;
+
+}
+
 #btnClose{
   background-color: #f39c12;
-  background-position: center;
-  width: 80px;
-  height: 80px;
+  padding: 0px;
+
+  width: 70px;
+  height: 60px;
   cursor: pointer;
   border-radius: 20px;
-  text-align: center;
+
+
 
 }
 
 #btnCheck{
   background-color: #44A685;
-  background-position: center;
-  width: 80px;
-  height: 80px;
+  padding: 0px;
+  width: 70px;
+  height: 60px;
   cursor: pointer;
   border-radius: 20px;
 
@@ -355,20 +362,26 @@ aside{
   #caixaAside{
     position: fixed;
     width: 400px;
-    top: 200px;
     height: 250px;
 
   }
 
   #perAside{
     width: 300px;
-    height: 400px;
+    height: 350px;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
     justify-content: center;
     align-items: center;
     left: 13%;
+
+  }
+
+  .perguntasAside{
+    height: 40px;
+    width: 100%;
+
   }
 
   #nomeAtiv{
