--- a/frontend/src/app/componentes/tela7/tela7.component.html
+++ b/frontend/src/app/componentes/tela7/tela7.component.html
@@ -1,8 +1,8 @@
 <main>
   <section>
     <div id="presentUser">
-      <h1>Bem-vindo,</h1>
-      <span id="nomeUser">Leticia</span>
+      <h1>Bem-vindo</h1>
+
     </div>
     <hr id="divisor-line">
     <div id="buttons">
