--- a/frontend/src/app/componentes/tela4/tela4.component.html
+++ b/frontend/src/app/componentes/tela4/tela4.component.html
@@ -1,102 +1,93 @@
+
 <main>
-  <section id="sec1">
-    <div id="presentUser">
-      <h1>Bem-vindo</h1>
+<section id="sec1">
+  <div id="presentUser">
+    <h1>Bem-vindo</h1>
 
-    </div>
-    <hr id="divisor-line">
-    <div id="buttons">
-      <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
-      <button routerLink="/tela4" class="button" id="bt_calen">Cadastro</button>
-      <button routerLink="/tela6" class="button" id="bt_ativ">Aprovar Atividades</button>
-      <button routerLink="" class="button" id="bt_sair">Sair</button>
-    </div>
+  </div>
+  <hr id="divisor-line">
+  <div id="buttons">
+    <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
+    <button routerLink="/tela4" class="button" id="bt_calen">Cadastro</button>
+    <button routerLink="/tela6" class="button" id="bt_ativ">Aprovar Atividades</button>
+    <button routerLink="" class="button" id="bt_sair">Sair</button>
+  </div>
+</section>
+<aside>
+  <div id="btnTela4">
+    <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
+  </div>
+  <section class="container">
+    <h1 id="title" class="tituloRegistro">Registrar-se</h1>
+    <form id="formCadastro" (ngSubmit)="cadastrar(formCadastro)" #formCadastro="ngForm">
+      <div id="dadosLogin">
+        <h1>Dados de Login</h1>
+        <div class="nomeCompleto">
+          <label id="firstNome" for="firstName">Nome Completo</label>
+          <div class="nomeCompletoInput">
+            <input type="text" placeholder="Primeiro Nome" id="firstName" [(ngModel)]="usuario.nome" name="primeiroNome" required>
+            <input type="text" placeholder="Sobrenome" id="secondName" [(ngModel)]="usuario.sobrenome" name="sobrenome" required>
+          </div>
+        </div>
+        <div class="emailForm">
+          <label id="emailTitle" for="email">Email</label>
+          <input type="email" placeholder="Digite seu email" id="email" [(ngModel)]="usuario.email" name="email" required>
+        </div>
+        <div class="senhaForm">
+          <label id="Senhas1" for="password">Senha</label>
+          <div class="senhaContainer">
+            <input type="password" placeholder="Digite sua senha" id="senha" [(ngModel)]="usuario.senha" name="senha" required>
+            <input type="password" placeholder="Confirme sua senha" id="confirmPassword" [(ngModel)]="usuario.senha" name="confirmPassword" required>
+          </div>
+        </div>
+        <div class="cpfDateContainer">
+          <div class="cpfContainer">
+            <label id="ColCpf" for="cpf">CPF</label>
+            <input type="number" placeholder="Somente Números" id="cpf" [(ngModel)]="usuario.cpf" name="cpf" required>
+          </div>
+          <div class="dateContainer">
+            <label id="date" for="date">Data de Nascimento:</label>
+            <input type="date" id="date" [(ngModel)]="usuario.dataNascimento" name="dataNascimento" required>
+          </div>
+        </div>
+        <div class="celularForm">
+          <label id="NumCelu" for="numberPhone">Celular</label>
+          <input type="number" placeholder="Somente Números" id="numberPhone" [(ngModel)]="usuario.telefone" name="celular" required>
+        </div>
+      </div>
+
+      <div id="dadosComplementares">
+        <h1>Dados Complementares</h1>
+        <div class="cepForm">
+          <label id="mCep" for="cep">CEP</label>
+          <input type="number" placeholder="Somente Números" id="cep" [(ngModel)]="usuario.cep" name="cep" required>
+          <button type="button" (click)="buscarCEP()">BUSCAR CEP</button>
+        </div>
+        <a>Não sei meu CEP</a>
+        <div class="numeroLogradouro">
+          <div class="logradouro">
+            <label id="ruaPd" for="logradouro">Rua</label>
+            <input type="text" placeholder="Digite Sua rua" id="logradouro" [(ngModel)]="usuario.logradouro" name="logradouro" required>
+          </div>
+          <div class="numero">
+            <label id="num1" for="numberHouse">Número</label>
+            <input type="number" placeholder="Somente Números " id="numberHouse" [(ngModel)]="usuario.telefone" name="numero" required>
+          </div>
+        </div>
+
+        <div class="bairro">
+          <label for="bairro">Bairro</label>
+          <input type="text" placeholder="Digite seu Bairro" id="bairro" [(ngModel)]="usuario.bairro" name="bairro" required>
+        </div>
+        <div class="cidadeEstado">
+          <div class="cidade">
+            <label id="ruaa" for="cidade">Cidade</label>
+            <input type="text" placeholder="Digite sua Cidade" id="cidade" [(ngModel)]="usuario.cidade" name="cidade" required>
+          </div>
+        </div>
+      </div>
+      <button type="submit" (click)="cadastrar(formCadastro)" class="enviarFormulario">CADASTRAR</button>
+    </form>
   </section>
-  <aside>
-    <div id="btnTela4">
-      <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
-    </div>
-    <section class="container">
-      <h1 id="title" class="tituloRegistro">Registrar-se</h1>
-      <form id="formCadastro" (ngSubmit)="cadastrar()">
-        <div id="dadosLogin">
-          <h1>Dados de Login</h1>
-          <div class="nomeCompleto">
-            <label id="firstNome" for="firstName">Nome Completo</label>
-            <div class="nomeCompletoInput">
-              <input type="text" placeholder="Primeiro Nome" id="firstName" [(ngModel)]="usuario.primeiroNome" name="primeiroNome" required>
-              <input type="text" placeholder="Sobrenome" id="secondName" [(ngModel)]="usuario.sobrenome" name="sobrenome" required>
-            </div>
-          </div>
-          <div class="emailForm">
-            <label id="emailTitle" for="email">Email</label>
-            <input type="email" placeholder="Digite seu email" id="email" [(ngModel)]="usuario.email" name="email" required>
-          </div>
-          <div class="senhaForm">
-            <label id="Senhas1" for="password">Senha</label>
-            <div class="senhaContainer">
-              <input type="password" placeholder="Digite sua senha" id="senha" [(ngModel)]="usuario.senha" name="senha" required>
-              <input type="password" placeholder="Confirme sua senha" id="confirmPassword" [(ngModel)]="usuario.senha" name="confirmPassword" required>
-            </div>
-          </div>
-          <div class="cpfDateContainer">
-            <div class="cpfContainer">
-              <label id="ColCpf" for="cpf">CPF</label>
-              <input type="number" placeholder="Somente Números" id="cpf" [(ngModel)]="usuario.cpf" name="cpf" required>
-            </div>
-            <div class="dateContainer">
-              <label id="date" for="date">Data de Nascimento:</label>
-              <input type="date" id="date" [(ngModel)]="usuario.dataNascimento" name="dataNascimento" required>
-            </div>
-          </div>
-          <div class="celularForm">
-            <label id="NumCelu" for="numberPhone">Celular</label>
-            <input type="number" placeholder="Somente Números" id="numberPhone" [(ngModel)]="usuario.celular" name="celular" required>
-          </div>
-        </div>
-
-        <div id="dadosComplementares">
-          <h1>Dados Complementares</h1>
-          <div class="cepForm">
-            <label id="mCep" for="cep">CEP</label>
-            <input type="number" placeholder="Somente Números" id="cep" [(ngModel)]="usuario.cep" name="cep" required>
-            <button type="button">BUSCAR CEP</button>
-          </div>
-          <a>Não sei meu CEP</a>
-          <div class="numeroLogradouro">
-            <div class="logradouro">
-              <label id="ruaPd" for="logradouro">Rua</label>
-              <input type="text" placeholder="Digite Sua rua" id="logradouro" [(ngModel)]="usuario.logradouro" name="logradouro" required>
-            </div>
-            <div class="numero">
-              <label id="num1" for="numberHouse">Número</label>
-              <input type="number" placeholder="Somente Números " id="numberHouse" [(ngModel)]="usuario.numero" name="numero" required>
-            </div>
-          </div>
-          <div class="complemento">
-            <label id="compl" for="complemento">Complemento</label>
-            <input type="text" placeholder="Apartamento, Ponto de referência e etc..." id="complemento" [(ngModel)]="usuario.complemento" name="complemento">
-          </div>
-          <div class="bairro">
-            <label for="bairro">Bairro</label>
-            <input type="text" placeholder="Digite seu Bairro" id="bairro" [(ngModel)]="usuario.bairro" name="bairro" required>
-          </div>
-          <div class="cidadeEstado">
-            <div class="cidade">
-              <label id="ruaa" for="cidade">Cidade</label>
-              <input type="text" placeholder="Digite sua Cidade" id="cidade" [(ngModel)]="usuario.cidade" name="cidade" required>
-            </div>
-            <div class="estado">
-              <label id="estadoo" for="estado">Estado:</label>
-              <select name="estado" id="estado" [(ngModel)]="usuario.estado" name="estado" required>
-                <option value="0">Selecione o Estado</option>
-                <!-- Adicione suas opções de estado aqui -->
-              </select>
-            </div>
-          </div>
-        </div>
-        <button type="submit" class="enviarFormulario">CADASTRAR</button>
-      </form>
-    </section>
-  </aside>
+</aside>
 </main>
