--- a/frontend/src/app/componentes/tela4/tela4.component.css
+++ b/frontend/src/app/componentes/tela4/tela4.component.css
@@ -248,61 +248,49 @@ label{
   width: 49%;
   display: flex;
   flex-direction: column;
- }
+  }
  .celularForm {
   grid-column: 1 / 3;
   display: flex;
   flex-direction: column;
- }
- .celularForm input {
+  }
+  .celularForm input {
   width: 49%;
- }
- #dadosComplementares {
+  }
+  #dadosComplementares {
   width: 40%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
- }
- #dadosComplementares h1 {
+  }
+  #dadosComplementares h1 {
   grid-column: 1 / 3;
   justify-self: center;
   color: #01526F;
- }
- #dadosComplementares a {
+  }
+  #dadosComplementares a {
   cursor: pointer;
 
- }
- .cepForm {
+  }
+  .cepForm {
   grid-column: 1 / 3;
   display: flex;
   flex-wrap: wrap;
- }
- .cepForm label {
+  }
+  .cepForm label {
   width: 100%;
- }
- .cepForm input {
+
+  }
+  .cepForm input {
   width: 40%;
- }
- .cepForm button {
-  margin-left: 10px;
-  border-radius: 5px;
-  border:  none;
-  background-color: #44A685;
-  box-shadow: 0px 0.25rem 0.25rem 0rem rgba(0, 0, 0, 0.25);
-  padding: 0.625rem 1.5625rem;
-  color: rgb(255, 253, 253);
-  font-weight: 600;
-  cursor: pointer;
-  opacity: .8;
- }
- .cepForm button:hover {
-  opacity: 1;
- }
- .numeroLogradouro {
+  }
+
+
+  .numeroLogradouro {
   grid-column: 1 / 3;
   display: flex;
   gap: 10px;
- }
- .logradouro {
+  }
+  .logradouro {
   display: flex;
   flex-direction: column;
   width: 60%;
@@ -310,8 +298,8 @@ label{
   font-weight:bold;
 
 
- }
- .numero {
+  }
+  .numero {
   display: flex;
   flex-direction: column;
   display: flex;
@@ -319,28 +307,28 @@ label{
   padding: 2px;
 
 
- }
- .complemento {
+  }
+  .complemento {
   grid-column: 1 / 3;
   display: flex;
   flex-direction: column;
- }
- .bairro {
+  }
+  .bairro {
   grid-column: 1 / 3;
   display: flex;
   flex-direction: column;
- }
- .cidadeEstado {
+  }
+  .cidadeEstado {
   grid-column: 1 / 3;
   display: flex;
   gap: 10px;
- }
- .cidade {
+  }
+  .cidade {
   display: flex;
   flex-direction: column;
   width: 50%;
- }
- .estado {
+  }
+  .estado {
   display: flex;
   flex-direction: column;
   width: 50%
@@ -461,11 +449,21 @@ input:focus {
 #mCep{
   display: flex;
   padding: 10px;
+  justify-content: center;
+
 }
-#cep{
-  display: flex;
+
+#cep1{
+ font-weight: bold;
+}
+#cep2{
+
   font-weight: bold;
-  height: 30px;
+  justify-content: center;
+  justify-items: center;
+
+
+
 }
 
 #ruaPd{
@@ -621,9 +619,8 @@ input:focus {
 
   #dadosComplementares{
     height: 140vh;
-    width: 80%;
-    background-color: #EFF5F4;
-    padding-bottom: 10px;
+    width: 70%;
+
   }
 
 
