--- a/frontend/src/app/componentes/tela7/tela7.component.css
+++ b/frontend/src/app/componentes/tela7/tela7.component.css
@@ -119,7 +119,7 @@ aside{
     background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 700px;
-    height: 440px;
+    height: 480px;
     bottom: 0;
 }
 
@@ -218,8 +218,31 @@ aside{
   border-bottom: 2px solid #43665A;
 }
 
-#als{
-  padding: 20px;
+
+
+.dia {
+  width: 60px; /* Ajuste conforme necessário */
+  height: 60px; /* Ajuste conforme necessário */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s; /* Para uma transição suave */
+}
+
+.dia:hover {
+  background-color: #e0e0e0; /* Cor de fundo ao passar o mouse */
+}
+
+.selecionado {
+  background-color: #007bff; /* Cor de fundo do dia selecionado */
+  color: white; /* Cor do texto do dia selecionado */
+  border-radius: 50%; /* Para arredondar os cantos */
+}
+
+#bt_als{
+  position: fixed;
+  left: 55%;
 }
 
 
@@ -281,10 +304,32 @@ aside{
     opacity: 0;
   }
 
-  #als{
-    display: flex;
+
+  .dia {
+    width: 60px; /* Ajuste conforme necessário */
+    height: 60px; /* Ajuste conforme necessário */
+    display: inline-flex;
     justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s; /* Para uma transição suave */
   }
+
+  .dia:hover {
+    background-color: #e0e0e0; /* Cor de fundo ao passar o mouse */
+  }
+
+  .selecionado {
+    background-color: #007bff; /* Cor de fundo do dia selecionado */
+    color: white; /* Cor do texto do dia selecionado */
+    border-radius: 50%; /* Para arredondar os cantos */
+  }
+
+  #bt_als{
+    position: fixed;
+    left: 30%;
+  }
+
 
 }
 
